--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -69,9 +69,7 @@
       {% for left_message, right_message, submission_id, form_type in pager.items %}
       {% if left_message.direction == 'IN' %}
       <tr>
-      {% if right_message == None %}
-        <td colspan="7" class="text-monospace">&nbsp;</td>
-      {% else %}
+      {% if right_message != None %}
         <td class="timestamp-date text-monospace" data-timestamp="{{ right_message.received|timestamp }}">{{ right_message.received.strftime('%b %d %Y') }}</td>
         <td class="timestamp-time text-monospace" data-timestamp="{{ right_message.received|timestamp }}">{{ right_message.received.strftime('%I:%M %p') }}</td>
         <td class="text-monospace">{{ right_message.recipient }}</td>
@@ -100,7 +98,6 @@
         <td class="text-monospace">{{ left_message.message_type.value }}</td>
         <td class="text-monospace">{% if form_type %}{{ form_type.value }}{% else %}{{ _('Invalid') }}{% endif %}</td>
       </tr>
-      <tr><td colspan="6"></td></tr>
       {% endif %}
       {% else %}
       <tr class="table-warning">
