--- a/apollo/frontend/templates/frontend/macros/submission_field_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_field_macros.html
@@ -1,9 +1,9 @@
 {% macro render_field(form_field, field_type, klass_, disabled=false) %}
 {% if field_type == 'multiselect' %}
 {% for value, label, selected in form_field.iter_choices() | sort %}
-<div class="form-check">
-<input type="checkbox" name="{{ form_field.name }}" id="{{ form_field.id }}_{{ loop.index }}" class="form-check-input" value="{{ value }}" {% if selected %}checked{% endif %}>
-<label for="{{ form_field.id }}_{{ loop.index }}" class="form-check-label">({{ value }}) {{ label }}</label>
+<div class="custom-control custom-checkbox">
+<input type="checkbox" name="{{ form_field.name }}" id="{{ form_field.id }}_{{ loop.index }}" class="custom-control-input" value="{{ value }}" {% if selected %}checked{% endif %} {%- if disabled %} disabled{% endif %}>
+<label for="{{ form_field.id }}_{{ loop.index }}" class="custom-control-label">{{ label }}</label>
 </div>
 {% endfor %}
 {% elif field_type == 'select' %}
