--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -288,7 +288,7 @@
           <tr>
             <td class="text-monospace">{{ message.text }}</td>
             {% if perms.edit_participant.can() -%}
-            <td class="text-monospace"><a href="{{ url_for('participants.participant_edit', id=message.participant.id) }}">{{ message.sender }}</a></td>
+            <td class="text-monospace">{% if message.participant %}<a href="{{ url_for('participants.participant_edit', id=message.participant.id) }}">{{ message.sender }}</a>{% else %}{{ message.sender }}{% endif %}</td>
             {% else -%}
             <td class="text-monospace">{{ message.sender }}</td>
             {% endif -%}
