Log ODK submissions in message log (#423)
* feat: add ODK submissions to message log

* fix: set message type

* fix: set message submission id

* fix: display inbound messages without replies

* chore: update template

* fix: remove "No response" messages

* chore: change reference to hardcoded value

* fix: stringify multi-valued responses

* chore: remove blank rows

--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -61,6 +61,7 @@
         <th scope="col">{{ _('Mobile') }}</th>
         <th scope="col">{{ _('Direction') }}</th>
         <th scope="col">{{ _('Text') }}</th>
+        <th scope="col" class="col-1">{{ _('Source') }}</th>
         <th scope="col" class="col-2">{{ _('Type') }}</th>
       </tr>
     </thead>
@@ -68,14 +69,13 @@
       {% for left_message, right_message, submission_id, form_type in pager.items %}
       {% if left_message.direction == 'IN' %}
       <tr>
-      {% if right_message == None %}
-        <td colspan="6" class="text-monospace"></td>
-      {% else %}
+      {% if right_message != None %}
         <td class="timestamp-date text-monospace" data-timestamp="{{ right_message.received|timestamp }}">{{ right_message.received.strftime('%b %d %Y') }}</td>
         <td class="timestamp-time text-monospace" data-timestamp="{{ right_message.received|timestamp }}">{{ right_message.received.strftime('%I:%M %p') }}</td>
         <td class="text-monospace">{{ right_message.recipient }}</td>
         <td class="text-monospace">{{ right_message.direction.value }}</td>
         <td class="text-monospace" style="word-wrap:break-word">{{ right_message.text }}</td>
+        <td class="text-monospace">{{ right_message.message_type.value }}</td>
         <td class="text-monospace">{% if form_type %}{{ form_type.value }}{% else %}{{ _('Invalid') }}{% endif %}</td>
       {% endif %}
       </tr>
@@ -85,6 +85,7 @@
         <td class="text-monospace">{{ left_message.sender }}</td>
         <td class="text-monospace">{{ left_message.direction.value }}</td>
         <td class="text-monospace" style="word-wrap:break-word">{{ left_message.text }}</td>
+        <td class="text-monospace">{{ left_message.message_type.value }}</td>
         <td class="text-monospace">{% if form_type %}{{ form_type.value }}{% else %}{{ _('Invalid') }}{% endif %}</td>
       </tr>
       {% else %}
@@ -94,13 +95,13 @@
         <td class="text-monospace">{{ left_message.recipient }}</td>
         <td class="text-monospace">{{ _(left_message.direction.value) }}</td>
         <td class="text-monospace" style="word-wrap:break-word">{{ left_message.text }}</td>
+        <td class="text-monospace">{{ left_message.message_type.value }}</td>
         <td class="text-monospace">{% if form_type %}{{ form_type.value }}{% else %}{{ _('Invalid') }}{% endif %}</td>
       </tr>
-      <tr><td colspan="6"></td></tr>
       {% endif %}
       {% else %}
       <tr class="table-warning">
-        <td class="text-center text-muted" colspan="6">{{ _('No Data Available') }}</td>
+        <td class="text-center text-muted" colspan="7">{{ _('No Data Available') }}</td>
       </tr>
       {% endfor %}
     </tbody>
