--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -220,6 +220,22 @@
               {% endfor %}
               <td class="col-2 align-middle">&nbsp;</td>
             </tr>
+            {% if perms.edit_submission_quarantine_status.can() %}
+            <tr>
+              <td class="align-middle"><strong>{{ _('Quarantine Status') }}</strong></td>
+              <td class="col-2 align-middle obs-on">
+                &nbsp;
+              </td>
+              {%- for sibling_form in sibling_forms %}
+              <td class="col-2 align-middle">
+                &nbsp;
+              </td>
+              {% endfor %}
+              <td class="col-2 align-middle ps-on">
+                {{ render_field(master_form.quarantine_status, 'select', klass_='form-control tracked text-monospace', disabled='disabled') }}
+              </td>
+            </tr>
+            {% endif %}
           </tbody>
         </table>
       </div>
@@ -676,12 +692,12 @@
     });
 
     $('.obs1').click(function(){
-        $('table#dataTable tbody tr td.obs-on :input').prop('disabled', false);
-        $('table#dataTable tbody tr td.ps-on :input').prop('disabled', true);
+        $('table tbody tr td.obs-on :input').prop('disabled', false);
+        $('table tbody tr td.ps-on :input').prop('disabled', true);
     });
     $('.ps').click(function(){
-        $('table#dataTable tbody tr td.ps-on :input').prop('disabled', false);
-        $('table#dataTable tbody tr td.obs-on :input').prop('disabled', true);
+        $('table tbody tr td.ps-on :input').prop('disabled', false);
+        $('table tbody tr td.obs-on :input').prop('disabled', true);
     });
 
     $('#saveBtn').click(function(){
