--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -259,6 +259,14 @@
             <tr {%- if field.tag in failed_check_tags and submission.form.quality_checks_enabled and field.tag not in submission.verified_fields and perms.edit_submission_verification_status.can() %} class="bg-warning"{% endif %}>
               <td class="align-middle" style="width: 0.1%; white-space: nowrap;"><strong>{{ field.tag }}</strong></td>
               <td class="align-middle">{{ field.description }}</td>
+              <td class="col-2 align-middle obs-on">
+              {% if field.tag in failed_check_tags and submission.form.quality_checks_enabled and perms.edit_submission_verification_status.can() %}
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" name="{{ submission_form.verified_fields.name }}" id="{{ submission_form.verified_fields.id }}_{{ field.tag }}" class="custom-control-input" value="{{ field.tag }}" {% if field.tag in submission.verified_fields %}checked{% endif %} {% if readonly %}disabled{% endif %}>
+                <label for="{{ submission_form.verified_fields.id }}_{{ field.tag }}" class="custom-control-label">{{ _('Verified') }}</label>
+              </div>
+              {% endif %}
+              </td>
               {% if readonly -%}
               <td class="col-2 align-middle obs-on">{{ render_field(submission_form[field.tag], field.type, klass_='form-control tracked text-monospace', disabled='disabled') }}</td>
               {%- else -%}
