add explicity yes/no question type for the form builder

--- a/apollo/templates/admin/formbuilder.html
+++ b/apollo/templates/admin/formbuilder.html
@@ -37,8 +37,8 @@
       </div>
     </div>
     <div class="col-md-6 sticky-top h-100" style="top: 5em">
-      <div class="card border-light bg-light" style="margin-bottom:2.5em;">
-        <div class="card-body">
+      <div class="card border-light bg-light">
+        <div class="card-body p-2">
           <div fb-components></div>
           <div>
             <button id="save" class="btn btn-primary d-none" ng-click="submit();"></button>
